--- a/css/styles.css
+++ b/css/styles.css
@@ -57,4 +57,36 @@ body {
 }
 .header .content__button:hover {
   background: #EB443F;
+}
+
+.main {
+  min-height: 556px;
+  background: #000915;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  align-items: center;
+  gap: 32px;
+}
+.main__game-card {
+  height: 300px;
+  padding-left: 32px;
+  padding-bottom: 32px;
+  grid-column: span 4;
+  background: linear-gradient(180deg, rgba(39, 1, 15, 0) 0%, #001944 100%);
+  border-radius: 16px;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 32px;
+  color: #FFFFFF;
+  display: flex;
+  align-items: end;
+}
+.main .card-1 {
+  background: url(../img/block-bg-1.jpg) center/cover no-repeat;
+}
+.main .card-2 {
+  background: url(../img/block-bg-2.jpg) center/cover no-repeat;
+}
+.main .card-3 {
+  background: url(../img/block-bg-3.jpg) center/cover no-repeat;
 }/*# sourceMappingURL=styles.css.map */
