--- a/css/styles.scss
+++ b/css/styles.scss
@@ -66,3 +66,36 @@ body {
         }
     }
 }
+
+.main {
+    min-height: 556px;
+    background: #000915;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    align-items: center;
+    gap: 32px;
+
+    &__game-card {
+        height: 300px;
+        padding-left: 32px;
+        padding-bottom: 32px;
+        grid-column: span 4;
+        background: linear-gradient(180deg, rgba(39, 1, 15, 0) 0%, #001944 100%);
+        border-radius: 16px;
+        font-weight: 600;
+        font-size: 24px;
+        line-height: 32px;
+        color: #FFFFFF;
+        display: flex;
+        align-items: end;
+    }
+    .card-1 {
+        background: url(../img/block-bg-1.jpg) center/cover no-repeat;
+    }
+    .card-2 {
+        background: url(../img/block-bg-2.jpg) center/cover no-repeat;
+    }
+    .card-3 {
+        background: url(../img/block-bg-3.jpg) center/cover no-repeat;
+    }
+}
