--- a/css/styles.scss
+++ b/css/styles.scss
@@ -88,6 +88,13 @@ body {
         color: #FFFFFF;
         display: flex;
         align-items: end;
+        cursor: pointer;
+        transition: all 0.5s;
+
+        &:hover {
+            border: 3px solid #44D2FF;
+            transform: scale(1.05);
+        }
     }
     .card-1 {
         background: url(../img/block-bg-1.jpg) center/cover no-repeat;
