--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,8 @@ body {
 }
 .header__content {
   grid-column: span 8;
+  display: flex;
+  flex-direction: column;
 }
 .header .content__title {
   margin-bottom: 32px;
@@ -60,11 +62,11 @@ body {
 }
 
 .main {
-  min-height: 556px;
+  padding-top: 128px;
+  padding-bottom: 128px;
   background: #000915;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  align-items: center;
   gap: 32px;
 }
 .main__game-card {
@@ -95,4 +97,50 @@ body {
 }
 .main .card-3 {
   background: url(../img/block-bg-3.jpg) center/cover no-repeat;
+}
+
+@media (min-width: 1025px) and (max-width: 1200px) {
+  .center {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+@media (max-width: 1024px) {
+  .center {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+  .main {
+    grid-template-columns: repeat(8, 1fr);
+  }
+}
+@media (max-width: 767px) {
+  .center {
+    padding-left: calc(50% - 171.5px);
+    padding-right: calc(50% - 171.5px);
+  }
+  .header {
+    min-height: 735px;
+    padding-top: 0;
+    grid-template-columns: repeat(4, 1fr);
+    align-content: center;
+  }
+  .header__content {
+    grid-column: span 4;
+    align-items: center;
+  }
+  .header .content__title {
+    font-size: 32px;
+    line-height: 39px;
+    text-align: center;
+  }
+  .header .content__text {
+    margin-bottom: 32px;
+    font-size: 14px;
+    line-height: 22px;
+    text-align: center;
+  }
+  .main {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }/*# sourceMappingURL=styles.css.map */
