--- a/css/styles.css
+++ b/css/styles.css
@@ -99,6 +99,55 @@ body {
   background: url(../img/block-bg-3.jpg) center/cover no-repeat;
 }
 
+.game-times-of-year {
+  min-height: 800px;
+  background: #000915;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
+}
+.game-times-of-year__content {
+  grid-column: span 6;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 32px;
+}
+.game-times-of-year .content__title {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 59px;
+  color: #FFFFFF;
+}
+.game-times-of-year .content__text {
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 32px;
+  color: #FFFFFF;
+}
+.game-times-of-year .content__button {
+  width: 234px;
+  height: 49px;
+  background: #9C0332;
+  border: none;
+  border-radius: 30px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: #FFFFFF;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+.game-times-of-year .content__button:hover {
+  background: #EB443F;
+}
+.game-times-of-year__img {
+  grid-column: span 6;
+  justify-self: end;
+}
+
 @media (min-width: 1025px) and (max-width: 1200px) {
   .center {
     padding-left: 20px;
@@ -112,6 +161,22 @@ body {
   }
   .main {
     grid-template-columns: repeat(8, 1fr);
+  }
+  .game-times-of-year {
+    grid-template-columns: repeat(4, 1fr);
+    row-gap: 64px;
+  }
+  .game-times-of-year__content {
+    grid-column: span 4;
+    justify-self: center;
+    align-items: center;
+  }
+  .game-times-of-year .content__text {
+    text-align: center;
+  }
+  .game-times-of-year__img {
+    grid-column: span 4;
+    justify-self: center;
   }
 }
 @media (max-width: 767px) {
@@ -142,5 +207,13 @@ body {
   }
   .main {
     grid-template-columns: repeat(4, 1fr);
+  }
+  .game-times-of-year .content__title {
+    font-size: 32px;
+    line-height: 39px;
+  }
+  .game-times-of-year .content__text {
+    font-size: 14px;
+    line-height: 22px;
   }
 }/*# sourceMappingURL=styles.css.map */
