--- a/css/styles.scss
+++ b/css/styles.scss
@@ -109,6 +109,62 @@ body {
     }
 }
 
+.game-times-of-year {
+    min-height: 800px;
+    background: #000915;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    justify-content: space-between;
+    align-content: center;
+    align-items: center;
+
+    &__content {
+        grid-column: span 6;
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        gap: 32px;
+    }
+    .content {
+        &__title {
+            font-weight: 700;
+            font-size: 48px;
+            line-height: 59px;
+            color: #FFFFFF;
+        }
+
+        &__text {
+            font-weight: 300;
+            font-size: 18px;
+            line-height: 32px;
+            color: #FFFFFF;
+        }
+
+        &__button {
+            width: 234px;
+            height: 49px;
+            background: #9C0332;
+            border: none;
+            border-radius: 30px;
+            font-weight: 400;
+            font-size: 18px;
+            line-height: 22px;
+            color: #FFFFFF;
+            cursor: pointer;
+            transition: background 0.3s;
+
+            &:hover {
+                background: #EB443F;
+            }
+        }
+    }
+
+    &__img {
+        grid-column: span 6;
+        justify-self: end;
+    }
+}
+
 @media (min-width: 1025px) and (max-width: 1200px) {
     .center {
         padding-left: 20px;
@@ -124,6 +180,27 @@ body {
 
     .main {
         grid-template-columns: repeat(8, 1fr);
+    }
+
+    .game-times-of-year {
+        grid-template-columns: repeat(4, 1fr);
+        row-gap: 64px;
+
+        &__content {
+            grid-column: span 4;
+            justify-self: center;
+            align-items: center;
+        }
+        .content {
+            &__text {
+                text-align: center;
+            }
+        }
+
+        &__img {
+            grid-column: span 4;
+            justify-self: center;
+        }
     }
 }
 
