--- a/css/styles.scss
+++ b/css/styles.scss
@@ -165,6 +165,23 @@ body {
     }
 }
 
+.game-guess-words {
+    @extend .game-times-of-year;
+
+    &__img-desktop {
+        @extend .game-times-of-year__img;
+        justify-self: start;
+    }
+
+    &__content {
+        @extend .game-times-of-year__content;
+    }
+
+    &__img {
+        display: none;
+    }
+}
+
 @media (min-width: 1025px) and (max-width: 1200px) {
     .center {
         padding-left: 20px;
@@ -200,6 +217,17 @@ body {
         &__img {
             grid-column: span 4;
             justify-self: center;
+        }
+    }
+
+    .game-guess-words {
+        &__img-desktop {
+            display: none;
+        }
+
+        &__img {
+            @extend .game-times-of-year__img;
+            display: block;
         }
     }
 }
